--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,4 +1,6 @@
-specVersion: 0.0.1
+specVersion: 0.0.2
+description: Testing subgraph for Upala
+repository: https://github.com/upala-digital-identity/subgraph
 schema:
   file: ./schema.graphql
 dataSources:
@@ -13,6 +15,7 @@ dataSources:
       apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
+        - Pool
         - Exploded
         - NewAttackWindow
         - NewDAppStatus
