--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -3,12 +3,13 @@ description: Testing subgraph for Upala
 repository: https://github.com/upala-digital-identity/subgraph
 schema:
   file: ./schema.graphql
+# todo add dai contract
 dataSources:
   - kind: ethereum
     name: Upala
     network: rinkeby
     source:
-      address: "0xDb5827C069593049398a7c6374557fD21Bcb8204"
+      address: "0xDee8F427d582cAF4c437558296398C9FA3a0c8B2"
       abi: Upala
       startBlock: 10455600
     mapping:
@@ -17,18 +18,19 @@ dataSources:
       language: wasm/assemblyscript
       entities:
         - Pool
-        - Exploded
-        - NewAttackWindow
-        - NewDAppStatus
-        - NewDelegateStatus
-        - NewExecutionWindow
-        - NewExplosionFeePercent
-        - NewIdentity
-        - NewIdentityOwner
-        - NewPool
-        - NewPoolFactoryStatus
-        - NewTreasury
-        - OwnershipTransferred
+        - UpalaID
+        - Delegate
+        # - Exploded
+        # - NewAttackWindow
+        # - NewDAppStatus
+        # - NewDelegateStatus
+        # - NewExecutionWindow
+        # - NewExplosionFeePercent
+        # - NewIdentityOwner
+        # - NewPool
+        # - NewPoolFactoryStatus
+        # - NewTreasury
+        # - OwnershipTransferred
       abis:
         - name: Upala
           file: ./abis/Upala.json
@@ -49,7 +51,7 @@ dataSources:
           handler: handleNewIdentity
         - event: NewIdentityOwner(address,address)
           handler: handleNewIdentityOwner
-        - event: NewPool(address,address)
+        - event: NewPool(address,address,address)
           handler: handleNewPool
         - event: NewPoolFactoryStatus(address,bool)
           handler: handleNewPoolFactoryStatus
@@ -58,3 +60,30 @@ dataSources:
         - event: OwnershipTransferred(indexed address,indexed address)
           handler: handleOwnershipTransferred
       file: ./src/mapping.ts
+
+templates:
+  - name: BundledScoresPool
+    kind: ethereum/contract
+    network: rinkeby
+    source:
+      abi: BundledScoresPool
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      file: ./src/bundledScoresPool.ts
+      entities:
+        - BundledScoresPool
+        - ScoreBundle
+      abis:
+        - name: BundledScoresPool
+          file: ./abis/BundledScoresPool.json
+      eventHandlers:
+        - event: MetaDataUpdate(string)
+          handler: handleMetaDataUpdate
+        - event: NewScoreBundleId(bytes32,uint256)
+          handler: handleNewScoreBundleId
+        - event: ScoreBundleIdDeleted(bytes32)
+          handler: handleScoreBundleIdDeleted
+        - event: NewBaseScore(uint256)
+          handler: handleNewBaseScore
